--- a/index.html
+++ b/index.html
@@ -17,31 +17,22 @@
     </div>
     <button class="generate">Generate new gif</button>
     <script>
-        function generateGif() {
+        async function generateGif() {
             const img = document.querySelector('img');
-            fetch('https://api.giphy.com/v1/gifs/translate?api_key=uOZK1qCwclYs7tg1XVHdKDUWLtDHif4w&s=puppy', {mode: 'cors'})
-            .then(function(response) {
-                return response.json();
-            })
-            .then(function(response) {
-                img.src = response.data.images.original.url;
-            });
+            const response = await fetch('https://api.giphy.com/v1/gifs/translate?api_key=uOZK1qCwclYs7tg1XVHdKDUWLtDHif4w&s=puppy', {mode: 'cors'});
+            const newData = await response.json();
+            img.src = newData.data.images.original.url;
         }
         generateGif();
 
         const input = document.querySelector('input');
         const searchBtn = document.querySelector('.search-btn');
-        searchBtn.addEventListener('click', () => {
+        searchBtn.addEventListener('click', async () => {
             const userInput = input.value;
-
             const img = document.querySelector('img');
-            fetch(`https://api.giphy.com/v1/gifs/translate?api_key=uOZK1qCwclYs7tg1XVHdKDUWLtDHif4w&s=${userInput}`, {mode: 'cors'})
-            .then(function(response) {
-                return response.json();
-            })
-            .then(function(response) {
-                img.src = response.data.images.original.url;
-            });
+            const response = await fetch(`https://api.giphy.com/v1/gifs/translate?api_key=uOZK1qCwclYs7tg1XVHdKDUWLtDHif4w&s=${userInput}`, {mode: 'cors'});
+            const newData = await response.json();
+            img.src = newData.data.images.original.url;
         })
 
         const generateBtn = document.querySelector('.generate');
